- `changevein`: affect connected veins even outside of the selected map block
- `logistics`: new ability to automatically forbid or claim items brought to a stockpile (or a dump within a stockpile)
- `tiletypes`: performance improvements when affecting tiles over a large range
- `tiletypes`: support for heavy aquifers
- Dreamfort: add a full complement of beds and chests to both barracks
- Dreamfort: redesign guildhall/temple/library level for better accessibility
- `buildingplan`: add option to ignore items from a specified burrow
- `autobutcher`: do not butcher pregnant (or brooding) females
- `quickfort`: support buildable instruments

## Documentation
- `installing`: add instructions for how to use Steam DFHack with non-Steam DF (for DFHack auto-updates and cloud backups)
- `modding-guide`: add a section on persistent storage, both for global settings and world-specific settings

## API
- Focus strings have moved for stockpile states: ``dwarfmode/CustomStockpile`` is now ``dwarfmode/Stockpile/Some/Customize`` and similar for ``dwarfmode/StockpileTools`` and ``dwarfmode/StockpileLink``
- ``Buildings::getName``: get a building's name, convenience method for easier use from Lua
- ``Maps::isTileAquifer``: check if tile is an aquifer
- ``Maps::isTileHeavyAquifer``: check if tile is a heavy aquifer
- ``Maps::setTileAquifer``: make tile into an aquifer
- ``Maps::setAreaAquifer``: make all tiles in a cuboid into aquifers, with the option to provide a filter
- ``Maps::removeTileAquifer``: remove aquifer from tile
- ``Maps::removeAreaAquifer``: remove aquifers from all tiles in a cuboid, with the option to provide a filter
- ``Units::makeown``: API to use bay12-provided entry point for "makeown" operation

## Lua
- ``dfhack.gui.getSelectedJob``: can now return the job with a destination under the keyboard cursor (e.g. digging/carving/engraving jobs)